# f1-warehouse

./: .gitignore  README.md  pyproject.toml
dagster_project/: definitions.py
dagster_project/defs/fastf1/: asset.py  source.py
dbt_project/macros/: format_duration_ns.sql
dbt_project/models/1_staging/fastf1/: source_fast_f1.yml  stg_fast_f1__schedule.sql  stg_fast_f1__schedule.yml
dbt_project/models/1_staging/fastf1/races/: stg_fast_f1__race_results.sql  stg_fast_f1__race_results.yml
dbt_project/models/1_staging/fastf1/schedules/: stg_fast_f1__schedule.sql
dbt_project/models/2_intermediate/schedules/: int_unpivot_weekends_to_sessions.sql  int_unpivot_weekends_to_sessions.yml
dbt_project/models/3_marts/: dim_sessions.sql  dim_sessions.yml
defs/fastf1/: source.py
