[project]
name = "f1-warehouse"
version = "0.1.0"
description = "End-to-end analytics pipeline prototype for Formula 1 data using dlt, Dagster, Postgres, and Streamlit."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster",
    "dagster-dg-cli>=1.12.3",
    "dagster-webserver>=1.12.3",
    "dlt>=1.18.2",
    "fastf1>=3.7.0",
    "dlt[postgres]",
    "dlt[parquet]",
    "dagster_dlt",
    "ruff",
    "dagster-dbt>=0.28.3",
    "dbt-postgres>=1.9.1",
    "sqlfluff>=3.5.0",
    "sqlfluff-templater-dbt>=3.5.0",
]

[tool.dagster]
module_name = "dagster_project.definitions"
code_location_name = "f1-warehouse"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_project"
